# mm

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
include/mm/: mm.h
src/: mm.c
tests/: CMakeLists.txt  playg.c
